# 42Lisbon-Course

./: .gitignore  README.md
b2br/: tasks.txt
fractol/: Makefile  fractol  fractol.c  fractol.h  fractol_gens.c  fratol  interaction_hooks.c  keycodes  keys.txt  view_utils.c  ~
ft_printf/: ft_printf.c  ft_printf.h  ft_printmemory.c  ft_putstr_fd.c  libftprintf.c  main.c
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c  mac_run_test.sh  main.c  run_command.sh  run_test.sh  test  test.txt  test_mixed_nl.txt
libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_split.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strstr.c  (+6 more)
philo/: CMakeLists.txt  Makefile  arg_processing.c  arg_processing_utils.c  initializers.c  philo  philo.c  philo.h  routine_utils.c  sim_utils.c  simulation.c  sum_utils.c  unused_funcs.c
pipex/: Makefile  argument_processing.c  cat -teout.txt  init_utils.c  out.txt  out2.txt  path_finding.c  pipex  pipex.c  pipex.h  process_utils.c  psout.txt  stdin_parsing.c  testout.txt  utils.c
push_swap/: Makefile  ft_split.c  input_checks.c  move_computation.c  move_computation_utils.c  ps.c  push_swap  push_swap.h  utils.c  (+12 more)
(+44 files in other folders)
